kubernetes/service-internal.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "k8s-node-internal"
  labels:
    app: "k8s-node"
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 3000
  selector:
    app: "k8s-node"
  type: "ClusterIP"
